# ProyectoOpenMP

./: CMakeLists.txt  README.md  main.c
